--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     minimumTime: 300,
                     fadeOutTime: 1000,
                     onProgress  :function(){
-                        $("#qLoverlay").css('background', 'red');
+                        $("#qLoverlay").css('background', 'url(images/preload/bg.jpg)');
                     }
                 });
             });
