--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</div>
 		</div>
 		<div class="menu">
-			<img src="UD.png" alt="">
+			<img src="images/UD.png" alt="">
 		</div>
 	</body>
 	<script type="text/javascript" src="js/core.js"></script>
