--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
 				<h3>第四屏</h3>
 			</div>
 		</div>
+		<input type="checkbox" id="tm" style="display: none;">
 		<div class="menu">
-			<img src="images/UD.png" alt="">
+			<img class="logo" src="images/UD.png" alt="">
+			<label for="tm"><img class="btn" src="images/menubtn.png" alt=""></label>
 		</div>
 	</body>
 	<script type="text/javascript" src="js/core.js"></script>
